# multi-thread-application

./: CMakeLists.txt  DoubleQueue.cc  DoubleQueue.h  blur_parallel  blur_parallel.cc  blur_sequential  blur_sequential.cc  compare_bmp  cqdbmp.c  negative  numbers  numbers.cc  sequential_numbers
